Added distribution comparison script and datasets

--- a/Testing Scripts/model_test.ipynb
+++ b/Testing Scripts/model_test.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "# orders = pd.read_csv('Tables/orders_table.csv')\n",
-    "customers = pd.read_csv('Tables/customers_table.csv')\n",
-    "# deliveries = pd.read_csv('Tables/deliveries_table.csv')\n",
-    "products = pd.read_csv('Tables/products_table.csv')"
+    "# orders = pd.read_csv('../Tables/orders_table.csv')\n",
+    "customers = pd.read_csv('../Tables/customers_table.csv')\n",
+    "# deliveries = pd.read_csv('../Tables/deliveries_table.csv')\n",
+    "products = pd.read_csv('../Tables/products_table.csv')"
    ]
   },
   {
@@ -60,7 +60,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Step 1: Load the products table\n",
-    "products_df = pd.read_csv('Tables/products_table.csv')\n",
+    "products_df = pd.read_csv('../Tables/products_table.csv')\n",
     "\n",
     "# Step 2: Select relevant columns for demand forecasting\n",
     "# Using 'total_sold' as historical sales and 'favorite' as an indicator of customer interest\n",
