Subgroup A Question 2 Churn Prediction Model Test

--- a/SubgroupA_Model/churnmodel_test.ipynb
+++ b/SubgroupA_Model/churnmodel_test.ipynb
@@ -614,7 +614,9 @@
     "   \n",
     "2. **Monitor Campaign Effectiveness**: Use A/B testing to assess the success of different marketing strategies tailored to each segment.\n",
     "\n",
-    "3. **Continuous Segmentation**: Regularly monitor customer behavior and update segmentation to reflect changing patterns and ensure that strategies remain relevant.\n"
+    "3. **Continuous Segmentation**: Regularly monitor customer behavior and update segmentation to reflect changing patterns and ensure that strategies remain relevant.\n",
+    "\n",
+    "---\n"
    ]
   },
   {
