Chatbot with LLM Integration

--- a/Chatbot/chatbot.ipynb
+++ b/Chatbot/chatbot.ipynb
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 12: Chatbot Main Function with LLM and Metrics Collection"
+    "# Step 12: Chatbot Main Function with LLM and Metrics Collection (The chatbot's output will be displayed after this section)"
    ]
   },
   {
@@ -833,7 +833,7 @@
     "\n",
     "Please note that the answers in this section are randomized but are still based on the customer's purchase history. Products that have already been purchased will not be included.\n",
     "\n",
-    "Note: The responses in the actual chatbot will not be formatted in a table as shown in this Markdown. Instead, they will appear as a continuous text, with product titles and prices presented side by side in a single line, as seen in the chatbot's output. This layout mimics a more natural, real-time conversation flow, where the product name and its price are listed sequentially on the same line.\n",
+    "**Note**: In the actual chatbot output, the product titles and prices are displayed in a continuous text format, side by side, rather than as separate lines or in a table. The layout follows a natural conversational flow, where product names and their prices are presented next to each other in a more compact, real-time manner. This format reflects how responses will appear in a live chatbot interaction.\n",
     "\n",
     "\n",
     "**Question 1**\n",
@@ -842,13 +842,12 @@
     "\n",
     "- **Bot**: Customer 299 last logged in 1 day ago on 2024-10-26 and their most recent checkout was 2 days ago on 2024-10-25.  \n",
     "  Based on your purchase history, I recommend these products:\n",
-    "\n",
-    "    | title                                                                                               | price_actual |\n",
-    "    |-----------------------------------------------------------------------------------------------------|--------------|\n",
-    "    | Keychain Key Ring Cartoon Keychain Keyfob Portable Party Key chain Free Gift BABY CITY Shopee Malaysia| 0.031141|\n",
-    "    | HIGH CULTURED® Classic Oxford Regular Button-Down Long Sleeve Shirt - 267 Shopee Malaysia             | 27.995939|\n",
-    "    | 10pcs (WHITE/GOLD) KIYOME KINOKI Cleansing Detox Foot Pads Pad Kaki Pembersih Detox Shopee Malaysia   | 0.155706|\n",
-    "\n",
+    "  \n",
+    "  title | price_actual\n",
+    "  \n",
+    "  Keychain Key Ring Cartoon Keychain Keyfob Portable Party Key chain Free Gift BABY CITY (Shopee Malaysia)  | 0.031141  \n",
+    "  HIGH CULTURED® Classic Oxford Regular Button-Down Long Sleeve Shirt - 267 (Shopee Malaysia) | 27.995939  \n",
+    "  10pcs (WHITE/GOLD) KIYOME KINOKI Cleansing Detox Foot Pads Pad Kaki Pembersih Detox (Shopee Malaysia)  | 0.155706\n",
     "\n",
     "**Question 2**\n",
     "\n",
@@ -857,12 +856,11 @@
     "- **Bot**: Customer 126576 last logged in 20 days ago on 2024-10-07 and their most recent checkout was 180 days ago on 2024-04-30.  \n",
     "  Based on your purchase history, I recommend these products:\n",
     "\n",
-    "    | title                                                                                                                             | price_actual |\n",
-    "    |-----------------------------------------------------------------------------------------------------------------------------------|--------------|\n",
-    "    | Ribena Cheerpack - Regular (330ml x 6) Shopee Malaysia                                                                            | 4.655609 |\n",
-    "    | 👍🏻Heavy Duty👍🏻 Car Tyre Tubeless Valve Aluminium /Kepala Tayar Tiub Angin Wheel Nut Sport Rim Nuts Tire Tube Valve TR48E Shopee Malaysia| 0.267814 |\n",
-    "    | Pashaphone Corded Phone KX-T504 with Big Button Landline Telephone TM Unifi Maxis Office Home Telefon 家用电话 Shopee Malaysia       | 6.197099|\n",
+    "  title | price_actual\n",
     "\n",
+    "  Ribena Cheerpack - Regular (330ml x 6) (Shopee Malaysia) | 4.655609  \n",
+    "  👍🏻Heavy Duty👍🏻 Car Tyre Tubeless Valve Aluminium /Kepala Tayar Tiub Angin Wheel Nut Sport Rim Nuts Tire Tube Valve TR48E (Shopee Malaysia) | 0.267814  \n",
+    "  Pashaphone Corded Phone KX-T504 with Big Button Landline Telephone TM Unifi Maxis Office Home Telefon 家用电话 (Shopee Malaysia) | 6.197099\n",
     "\n",
     "**Question 3**\n",
     "\n",
@@ -871,11 +869,12 @@
     "- **Bot**: Customer 105738 last logged in 30 days ago on 2024-09-27 and their most recent checkout was 91 days ago on 2024-07-28.  \n",
     "  Based on your purchase history, I recommend these products:\n",
     "\n",
-    "    | title                                                                                                                | price_actual |\n",
-    "    |----------------------------------------------------------------------------------------------------------------------|--------------|\n",
-    "    | Apple iPad 10.9-inch 10th Generation 2022 (Wi-Fi) Shopee Malaysia                                                    | 653.653797|\n",
-    "    | (Random Color) 1 PCS Classic Pull Flywheel Flash Yo-Yo Toy Multicolor Light Color Flying Saucer Model Luminous Shopee Malaysia| 0.183733|\n",
-    "    | Tshirt Dewasa Stand for Palestine / SAVE GAZA (S-XXL) Tshirt Lelaki Perempuan Cotton Lengan Pendek Murah Shopee Malaysia|1.494778|\n",
+    "  title | price_actual\n",
+    "  \n",
+    "  Apple iPad 10.9-inch 10th Generation 2022 (Wi-Fi) (Shopee Malaysia) | 653.653797  \n",
+    "  (Random Color) 1 PCS Classic Pull Flywheel Flash Yo-Yo Toy Multicolor Light Color Flying Saucer Model Luminous (Shopee Malaysia) | 0.183733  \n",
+    "  Tshirt Dewasa Stand for Palestine / SAVE GAZA (S-XXL) Tshirt Lelaki Perempuan Cotton Lengan Pendek Murah (Shopee Malaysia) | 1.494778\n",
+    "\n",
     "---\n",
     "\n",
     "### **General Queries (Fallback to DialoGPT):**\n",
