Chatbot with LLM Integration

--- a/Chatbot/chatbot.ipynb
+++ b/Chatbot/chatbot.ipynb
@@ -903,7 +903,7 @@
     "\n",
     "The following breakdown explains how the chatbot implementation addresses these goals:\n",
     "\n",
-    "### 1. **Implementing an AI Chatbot Using an LLM**\n",
+    "### **1. Implementing an AI Chatbot Using an LLM**\n",
     "\n",
     "The implementation uses **DialoGPT**, a transformer-based LLM, which is fine-tuned for dialogue generation, making it suitable for customer query handling and product recommendations. Here's how the chatbot functions:\n",
     "\n",
@@ -925,7 +925,7 @@
     "  - Through `get_product_info(product_name, info_type)`, the chatbot can answer questions about product details such as price or rating. It can also follow up on a product from earlier in the conversation, demonstrating the chatbot’s ability to handle specific customer needs effectively.\n",
     "\n",
     "\n",
-    "### 2. **Evaluating the Effectiveness of the AI Chatbot**\n",
+    "### **2. Evaluating the Effectiveness of the AI Chatbot**\n",
     "\n",
     "The chatbot code includes several metrics and mechanisms to assess its performance:\n",
     "\n",
@@ -940,7 +940,7 @@
     "  - An average feedback score is calculated and displayed at the end of the session, providing insight into how users perceive the chatbot’s effectiveness.\n",
     "\n",
     "\n",
-    "### 3. **Potential of LLMs for Personalized Customer Support**\n",
+    "### **3. Potential of LLMs for Personalized Customer Support**\n",
     "\n",
     "The implementation demonstrates the following potential of using LLMs like **DialoGPT** for personalized customer support:\n",
     "\n",
@@ -957,7 +957,7 @@
     "  - By analyzing customer history, the chatbot can offer personalized recommendations, which can improve customer engagement and drive sales.\n",
     "\n",
     "\n",
-    "### 4. **Summary of Chatbot Capabilities and Effectiveness**\n",
+    "### **4. Summary of Chatbot Capabilities and Effectiveness**\n",
     "\n",
     "- **Personalized Customer Support and Engagement:**\n",
     "  - The chatbot can tailor responses based on customer history, offer relevant product recommendations, and assist with product inquiries.\n",
