--- a/Chatbot/chatbot.ipynb
+++ b/Chatbot/chatbot.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,9 +735,9 @@
     "\n",
     "**Question 3**\n",
     "\n",
-    "- **User**: Tell me **the price of** shirt.\n",
+    "- **User**: Tell me **the price of** slippers.\n",
     "\n",
-    "- **Bot**: I found the product you're looking for! The 'Men Male Shirt Solid Blouse Jumper Shirts Pullover T-Shirt High neck Basic Thermal Mens Casual Long Sleeve Tops | Shopee Malaysia' is priced at 1.8684720258596528.\n",
+    "- **Bot**: I found the product you're looking for! The 'Shark Slipper Accessories EVA Material Is Applicable to Shark Thick Bottom Slippers Shark Fin | Shopee Malaysia' is priced at 1.8373308254286589.\n",
     "\n",
     "\n",
     "**Question 4**\n",
@@ -752,6 +752,13 @@
     "- **User**: Find **the price of** apple pencil!\n",
     "\n",
     "- **Bot**: I found the product you're looking for! The 'Apple Pencil (2nd Generation) | Shopee Malaysia' is priced at 139.823989935164.\n",
+    "\n",
+    "\n",
+    "**Question 6**\n",
+    "\n",
+    "- **User**: Tell us **the price of** belt!\n",
+    "\n",
+    "- **Bot**: I found the product you're looking for! The 'Men Slimming Slim Singlet Vest Belt Slim n Body Fit Shaper | Shopee Malaysia' is priced at 2.7995939187463796.\n",
     "\n",
     "---\n",
     "\n",
@@ -773,9 +780,9 @@
     "\n",
     "**Question 3**\n",
     "\n",
-    "- **User**: What’s **the rating of** shirt?\n",
+    "- **User**: What’s **the rating of** slippers?\n",
     "\n",
-    "- **Bot**: The 'Men Male Shirt Solid Blouse Jumper Shirts Pullover T-Shirt High neck Basic Thermal Mens Casual Long Sleeve Tops | Shopee Malaysia' has a rating of 4.8 stars.\n",
+    "- **Bot**: The 'Shark Slipper Accessories EVA Material Is Applicable to Shark Thick Bottom Slippers Shark Fin | Shopee Malaysia' has a rating of 5.0 stars.\n",
     "\n",
     "\n",
     "**Question 4**\n",
@@ -790,6 +797,13 @@
     "- **User**: Find **the rating of** apple pencil!\n",
     "\n",
     "- **Bot**: The 'Apple Pencil (2nd Generation) | Shopee Malaysia' has a rating of 4.9 stars.\n",
+    "\n",
+    "\n",
+    "**Question 6**\n",
+    "\n",
+    "- **User**: Tell us **the rating of** belt!\n",
+    "\n",
+    "- **Bot**: The 'Men Slimming Slim Singlet Vest Belt Slim n Body Fit Shaper | Shopee Malaysia' has a rating of 4.8 stars.\n",
     "\n",
     "---\n",
     "\n",
