--- a/Chatbot/chatbot_non api with explanations.ipynb
+++ b/Chatbot/chatbot_non api with explanations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chatbot with LLM Integration Using Pandas and DialoGPT"
+    "# E-Commerce Chatbot with LLM Integration Using Pandas and DialoGPT"
    ]
   },
   {
