Analysis of Customer Retention and Lifetime Value

--- a/Subgroup A/Question 2_Analysis of Customer Retention and Lifetime Value.ipynb
+++ b/Subgroup A/Question 2_Analysis of Customer Retention and Lifetime Value.ipynb
@@ -3575,7 +3575,7 @@
     "### General Observations\n",
     "\n",
     "1. **Average Purchase Value by Gender**:\n",
-    "   - **Observation**: Female customers have a slightly higher average purchase value ($37.40) compared to male customers ($36.55).\n",
+    "   - **Observation**: Female customers have a slightly higher average purchase value ($37.40) compared to male ($36.55).\n",
     "   - **Interpretation**: Female customers tend to spend marginally more per transaction. This could be influenced by product preferences, with certain items potentially being more popular among female customers.\n",
     "\n",
     "2. **Average Purchase Frequency by Gender**:\n",
