Analysis of Customer Retention and Lifetime Value

--- a/Subgroup A/Question 2_Analysis of Customer Retention and Lifetime Value.ipynb
+++ b/Subgroup A/Question 2_Analysis of Customer Retention and Lifetime Value.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Exploratory Data Analysis (EDA)**"
+    "# **Step 1: Exploratory Data Analysis (EDA)**"
    ]
   },
   {
@@ -841,7 +841,7 @@
     "id": "_DOfl5aVpjVQ"
    },
    "source": [
-    "# **Data Preprocessing**"
+    "# **Step 2: Data Preprocessing**"
    ]
   },
   {
@@ -1427,7 +1427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Calculating Monthly Customer Churn Rates**"
+    "# **Step 3: Calculating Monthly Customer Churn Rates**"
    ]
   },
   {
@@ -1541,7 +1541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Verification Code to Identify and Analyze Months with 0% Customer Churn Rate\n"
+    "## Step 3.1 Verification Code to Identify and Analyze Months with 0% Customer Churn Rate\n"
    ]
   },
   {
@@ -1724,7 +1724,7 @@
     "id": "Q2VFrUi4pjVR"
    },
    "source": [
-    "# **Comprehensive Analysis of Customer Retention Rates**"
+    "# **Step 4: Comprehensive Analysis of Customer Retention Rates**"
    ]
   },
   {
@@ -1733,7 +1733,7 @@
     "id": "WrVhWt2_pjVR"
    },
    "source": [
-    "# Step 1: Analyzing Monthly Retention Rates"
+    "## Step 4.1: Analyzing Monthly Retention Rates"
    ]
   },
   {
@@ -1916,7 +1916,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 2: Analyzing Customer Retention Rates by Age"
+    "## Step 4.2: Analyzing Customer Retention Rates by Age"
    ]
   },
   {
@@ -2138,7 +2138,7 @@
     "id": "abKm-yPZpjVS"
    },
    "source": [
-    "# Step 3: Analyzing Customer Retention Rates by Gender"
+    "## Step 4.3: Analyzing Customer Retention Rates by Gender"
    ]
   },
   {
@@ -2296,7 +2296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 4: Analyzing Customer Retention Rates by Engagement Level (High vs Low Engagement)"
+    "## Step 4.4: Analyzing Customer Retention Rates by Engagement Level (High vs Low Engagement)"
    ]
   },
   {
@@ -2463,7 +2463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 5: Analyzing Customer Retention Rates by Promotional Campaign Type"
+    "## Step 4.5: Analyzing Customer Retention Rates by Promotional Campaign Type"
    ]
   },
   {
@@ -2648,7 +2648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Comprehensive Analysis of Customer Lifetime Value (CLV)**"
+    "# **Step 5: Comprehensive Analysis of Customer Lifetime Value (CLV)**"
    ]
   },
   {
@@ -2657,7 +2657,7 @@
     "id": "gnqztpOi0VaR"
    },
    "source": [
-    "# Step 1: Analyzing Monthly Customer Lifetime Value (CLV)"
+    "## Step 5.1: Analyzing Monthly Customer Lifetime Value (CLV)"
    ]
   },
   {
@@ -3000,7 +3000,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1.1: Calculating and Evaluating the Customer Acquisition Cost (CAC) in Relation to Customer Lifetime Value (CLV)"
+    "## Step 5.1.1: Calculating and Evaluating the Customer Acquisition Cost (CAC) in Relation to Customer Lifetime Value (CLV)"
    ]
   },
   {
@@ -3138,7 +3138,7 @@
     "id": "XsT_53sHDaPp"
    },
    "source": [
-    "# Step 2: Analyzing Customer Lifetime Value (CLV) by Age"
+    "## Step 5.2: Analyzing Customer Lifetime Value (CLV) by Age"
    ]
   },
   {
@@ -3410,7 +3410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 3: Analyzing Customer Lifetime Value (CLV) by Gender"
+    "## Step 5.3: Analyzing Customer Lifetime Value (CLV) by Gender"
    ]
   },
   {
@@ -3575,7 +3575,7 @@
     "### General Observations\n",
     "\n",
     "1. **Average Purchase Value by Gender**:\n",
-    "   - **Observation**: Female customers have a slightly higher average purchase value ($37.40) compared to male ($36.55).\n",
+    "   - **Observation**: Female customers have a slightly higher average purchase value of 37.40$ compared to male customers, who have an average purchase value of 36.55$.\n",
     "   - **Interpretation**: Female customers tend to spend marginally more per transaction. This could be influenced by product preferences, with certain items potentially being more popular among female customers.\n",
     "\n",
     "2. **Average Purchase Frequency by Gender**:\n",
@@ -3587,7 +3587,7 @@
     "   - **Interpretation**: The minimal difference in customer lifespan suggests that both male and female customers have similar retention rates, with gender not being a strong differentiator in terms of engagement duration.\n",
     "\n",
     "4. **Customer Lifetime Value (CLV) by Gender**:\n",
-    "   - **Observation**: Female customers have a higher CLV ($988.10) compared to male customers ($837.75), primarily driven by higher purchase frequency and average purchase value.\n",
+    "   - **Observation**: Female customers have a higher CLV, amounting to 988.10$, compared to male customers, whose CLV is 837.75$. This difference is primarily driven by higher purchase frequency and average purchase value among female customers.\n",
     "   - **Interpretation**: Female customers are generating more lifetime value due to higher engagement, suggesting that strategies targeting female customers could yield better returns on investment.\n",
     "\n",
     "### Key Insights\n",
@@ -3655,7 +3655,7 @@
     "id": "MCSjqWmjEJGg"
    },
    "source": [
-    "# Step 4: Customer Lifetime Value (CLV) by Engagement Level (High vs Low Engagement)"
+    "## Step 5.4: Customer Lifetime Value (CLV) by Engagement Level (High vs Low Engagement)"
    ]
   },
   {
@@ -3916,7 +3916,7 @@
     "id": "oxJHZF0PFCnN"
    },
    "source": [
-    "# Step 5: Customer Lifetime Value (CLV) by Promotional Campaign Type"
+    "## Step 5.5: Customer Lifetime Value (CLV) by Promotional Campaign Type"
    ]
   },
   {
@@ -4091,7 +4091,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5.1 Verification Code to Analyze Customer Lifespans and Campaign Date Range for Near-Zero CLV in \"High Priority Seasonal Sales Date\"\n"
+    "## Step 5.5.1 Verification Code to Analyze Customer Lifespans and Campaign Date Range for Near-Zero CLV in \"High Priority Seasonal Sales Date\"\n"
    ]
   },
   {
